--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "codemirror": "^5.65.16",
     "framer-motion": "^11.2.9",
     "graphql": "^16.8.1",
+    "html-to-react": "^1.7.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
