--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.8.1",
     "html-to-react": "^1.7.0",
     "jwt-decode": "^4.0.0",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.2.0",
