--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "codemirror": "^5.65.16",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.9",
     "graphql": "^16.8.1",
     "html-to-react": "^1.7.0",
