--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "vite-plugin-pwa": "^0.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
